--- a/examples/dashboard/package.json
+++ b/examples/dashboard/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "jazz-react": "workspace:0.10.12",
+    "jazz-tools": "workspace:0.10.12",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-query-devtools": "^5.66.9",
     "@tanstack/react-router": "^1.111.11",
